tests/errors/param-width.expect
---CODE---
1
---STDERR---
error: required bundle of width `32' but found bundle of width `W'
  ┌─ tests/errors/param-width.fil:5:17
  │
5 │     a0 := A<'G>(a, a);
  │                 ^ source has width W
  │
  ┌─ ./primitives/./comb.fil:9:7
  │
9 │       left: ['G, 'L] IN_WIDTH,
  │       ---- destination has width 32

error: required bundle of width `32' but found bundle of width `W'
   ┌─ tests/errors/param-width.fil:5:20
   │
 5 │     a0 := A<'G>(a, a);
   │                    ^ source has width W
   │
   ┌─ ./primitives/./comb.fil:10:7
   │
10 │       right: ['G, 'L] IN_WIDTH,
   │       ----- destination has width 32

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
